--- a/html/example3-CSS2D.html
+++ b/html/example3-CSS2D.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <style>canvas { width: 100%; height: 100% }</style>
-    <script src="../js/three.min.js"></script>
+    <script src="../js/common/three.min.js"></script>
 </head>
 <body>
 <script>
