--- a/html/D01-202.html
+++ b/html/D01-202.html
@@ -566,7 +566,7 @@
 
         moduleBuilder.buildCabinets(11,25,createAreaTag);
 
-        moduleBuilder.findServerByLocation('HDNJIH-00A-1202',1000,showServerInfo,serverList);
+        moduleBuilder.findServerByLocation('1202',2000,showServerInfo,serverList);
 
     }
 
