--- a/html/D01-203.html
+++ b/html/D01-203.html
@@ -557,7 +557,7 @@
 
         moduleBuilder.buildCabinets(11,25,createAreaTag);
 
-        moduleBuilder.findServerByLocation('HDNJIH-03A-1203',1000,showServerInfo,serverList);
+        moduleBuilder.findServerByLocation('1203',2000,showServerInfo,serverList);
     }
 
     function showServerInfo (server, event) {
